--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,6 @@ spring:
   config:
     import:
       - optional:file:.env[.properties]
-      - classpath:application-oauth.yml
 
 jwt:
   secret: ${JWT_SECRET_KEY}
@@ -16,9 +15,8 @@ jwt:
 
 security:
   public-urls:
-    # 소셜 로그인 관련
-    - "/oauth2/**"
-    - "/login/oauth2/**"
+    # 클라이언트 기반 소셜 로그인
+    - "/api/auth/social/login"
     # JWT 토큰 관리
     - "/api/auth/token/refresh"
     - "/api/auth/token/refresh/full"
