docs: 새로운 api 관련 문서 정리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   profiles:
-    active: dev # ?? ????: dev
+    active: dev
   config:
     import:
       - optional:file:.env[.properties]
