feat: ci 테스트를 위한 deploy.yml 생성

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -22,7 +22,7 @@ cookie:
 
 swagger:
   server:
-    url: ${SWAGGER_SERVER_URL:https://habiglow.duckdns.org}
+    url: ${SWAGGER_SERVER_URL:http://habiglow.duckdns.org}
     description: 운영 서버
 
 logging:
