--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,22 +74,43 @@ jobs:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
         run: |
-          # SSH 키 파일 생성 및 권한 설정
+          # SSH 키 준비
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-          # SCP를 사용해 JAR 파일 EC2로 전송
-          scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ./build/libs/habiglow-0.0.1-SNAPSHOT.jar ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ubuntu/
-          
-          # SSH 접속 및 애플리케이션 재시작
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-            # 원격 서버에서 실행할 명령어들
-            sudo pkill -f "java -jar" || true # 기존 애플리케이션 종료
+          # JAR 전송
+          scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ./build/libs/habiglow-0.0.1-SNAPSHOT.jar \
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ubuntu/
 
-            # 새 애플리케이션 시작 (환경 변수 적용)
-            nohup java -jar -Dspring.profiles.active=prod -DDB_HOST=${{ secrets.DB_HOST }} -DDB_PORT=5432 -DDB_NAME=${{ secrets.DB_NAME }} -DDB_USERNAME=${{ secrets.DB_USERNAME }} -DDB_PASSWORD=${{ secrets.DB_PASSWORD }} -DJWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} ~/habiglow-0.0.1-SNAPSHOT.jar > ~/nohup.out 2>&1 &
-          
-            # Nginx 재시작
-            sudo systemctl restart nginx
+          # 원격 실행
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            set -e
+            sudo pkill -f "java -jar" || true   # 기존 프로세스 종료
+
+            # (1) DB/앱 환경변수 주입
+            export DB_HOST="${{ secrets.DB_HOST }}"
+            export DB_PORT="5432"
+            export DB_NAME="${{ secrets.DB_NAME }}"
+            export DB_USERNAME="${{ secrets.DB_USERNAME }}"
+            export DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
+            export SWAGGER_SERVER_URL="${{ vars.SWAGGER_SERVER_URL }}"
+            export JWT_SECRET_KEY="${{ secrets.JWT_SECRET_KEY }}"
+            export JWT_ACCESS_EXPIRATION="${{ vars.JWT_ACCESS_EXPIRATION }}"
+            export JWT_REFRESH_EXPIRATION="${{ vars.JWT_REFRESH_EXPIRATION }}"
+            export SPRING_PROFILES_ACTIVE="prod"
+
+            # (선택) Spring이 직접 먹도록 명시적 Datasource도 함께 넘겨 안정화
+            export SPRING_DATASOURCE_URL="jdbc:postgresql://$DB_HOST:$DB_PORT/$DB_NAME"
+            export SPRING_DATASOURCE_USERNAME="$DB_USERNAME"
+            export SPRING_DATASOURCE_PASSWORD="$DB_PASSWORD"
+
+            # (2) 중요: JVM -D 옵션은 반드시 -jar '앞'에 둔다
+            nohup java \
+              -Dspring.profiles.active="$SPRING_PROFILES_ACTIVE" \
+              -jar /home/ubuntu/habiglow-0.0.1-SNAPSHOT.jar \
+              > /home/ubuntu/nohup.out 2>&1 &
+
+            # (3) Nginx 재시작 (있다면)
+            sudo systemctl restart nginx || true
           EOF
