--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    if: github.repository == 'hskhsmm/2025_SEASONTHON_TEAM_90_BE'
 
     # Docker를 사용해 임시 PostgreSQL 컨테이너 실행 (테스트용)
     services:
@@ -88,20 +89,8 @@ jobs:
             sudo pkill -f "java -jar" || true # 기존 애플리케이션 종료
           
             # 새 애플리케이션 시작 (환경 변수 적용)
-            nohup java -jar \
-              -Xms256m \
-              -Xmx512m \
-              -Dspring.profiles.active=${{ vars.SPRING_PROFILES_ACTIVE }} \
-              -Dspring.datasource.url=jdbc:postgresql://${{ secrets.DB_HOST }}:${{ vars.DB_PORT }}/${{ secrets.DB_NAME }} \
-              -Dspring.datasource.username=${{ secrets.DB_USERNAME }} \
-              -Dspring.datasource.password=${{ secrets.DB_PASSWORD }} \
-              -DJWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} \
-              -DJWT_ACCESS_EXPIRATION=${{ vars.JWT_ACCESS_EXPIRATION }} \
-              -DJWT_REFRESH_EXPIRATION=${{ vars.JWT_REFRESH_EXPIRATION }} \
-              -Dspring.jpa.hibernate.ddl-auto=validate \
-              -Dswagger.server.url=${{ vars.SWAGGER_SERVER_URL }} \
-              /home/ubuntu/habiglow-0.0.1-SNAPSHOT.jar > /home/ubuntu/nohup.out 2>&1 &
-                      
+            nohup java -jar -Dspring.profiles.active=prod -Dspring.datasource.url=jdbc:postgresql://${{ secrets.DB_HOST }}:${{ vars.DB_PORT }}/${{ secrets.DB_NAME }} -Dspring.datasource.username=${{ secrets.DB_USERNAME }} -Dspring.datasource.password=${{ secrets.DB_PASSWORD }} -DJWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} ~/habiglow-0.0.1-SNAPSHOT.jar > ~/nohup.out 2>&1 &
+          
             # Nginx 재시작
             sudo systemctl restart nginx
           EOF
