fix jwt:JWT 401 에러 중복 로그 문제 해결 및 인증 시스템 표준화
  - JWT 필터에서 직접 HTTP 응답 작성하던 비표준 방식을 Spring Security 표준 메커니즘으로 변경
  - JwtAuthenticationEntryPoint와 JwtAccessDeniedHandler를 통한 통합 에러 처리 구현
  - SecurityResponseUtils 유틸리티 클래스로 중복 응답 생성 로직 통합
  - JWT 예외 클래스 계층구조 구축 (토큰 검증, 블랙리스트 처리)
  - 헬스체크 엔드포인트를 public URL로 설정하여 불필요한 인증 실패 로그 제거
  - 사용되지 않는 JWT 예외 클래스 정리로 코드베이스 간소화

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,9 @@ security:
     - "/api-docs"
     - "/v3/api-docs/**"
     - "/swagger-ui/**"
+    # 헬스체크
+    - "/health"
+    - "/actuator/health"
     # 일반 회원가입 제거: "/api/join", "/api/join/email-check", "/api/auth/login"
   cors-max-age: 3600
 
