--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 	// Spring Data JPA (ORM, Repository 등 DB 연동 기능 제공)
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+	// Spring Boot Actuator (헬스체크, 메트릭 등 모니터링 기능)
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 	// === Spring Security 관련 의존성 ===
 	// Spring Security (인증/인가 기능 제공)
 	implementation 'org.springframework.boot:spring-boot-starter-security'
