--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -38,6 +38,16 @@ logging:
     org.springframework.web.reactive.function.client: warn
     root: warn
 
+# ===== Actuator 설정 (개발환경) =====
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
+
 # ===== 대시보드/프롬프트 설정 (추가) =====
 dashboard:
   weekly:
