--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,8 +27,9 @@ security:
     - "/api-docs"
     - "/v3/api-docs/**"
     - "/swagger-ui/**"
-    # 헬스체크
+    # 헬스체크 (Actuator)
     - "/health"
+    - "/actuator/health"
     # 일반 회원가입 제거: "/api/join", "/api/join/email-check", "/api/auth/login"
   cors-max-age: 3600
 
@@ -44,6 +45,17 @@ logging:
     root: warn
     org.springframework: warn
 
+
+# ===== Actuator 설정 (헬스체크) =====
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+      base-path: /actuator
+  endpoint:
+    health:
+      show-details: when-authorized
 
 # ===== 대시보드/프롬프트 설정 (추가) =====
 dashboard:
