fix: 감소루틴 로직 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,6 +44,7 @@ logging:
   level:
     root: warn
     org.springframework: warn
+    com.groomthon.habiglow.domain.routine: info
 
 
 # ===== Actuator 설정 (헬스체크) =====
