feat: FCM Admin 초êdmin 초기 세팅

--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,12 @@ pgdata/
 *.sql
 
 # ========================
+# firebase 키
+# ========================
+/src/main/resources/firebase/*.json
+
+
+# ========================
 # Git 충돌/백업 파일
 # ========================
 *.orig
