--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,6 +25,12 @@ openai:
 cookie:
   secure: false
 
+fcm:
+  firebase:
+    config:
+      path: "classpath:firebase/habiglow-3db7f-firebase-adminsdk-fbsvc-53af65622f.json"
+
+
 swagger:
   server:
     url: ${SWAGGER_SERVER_URL:http://localhost:8080}
