fix: Docker 컨테이너에서 Firebase 키 파일을 못 찾는 문제 해결

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -28,7 +28,7 @@ cookie:
 fcm:
   firebase:
     config:
-      path: "classpath:firebase/habiglow-service-account.json"
+      path: "firebase/habiglow-service-account.json"
 
 
 swagger:
