--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,11 +46,6 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Create Firebase config for CI
-        run: |
-          mkdir -p src/main/resources/firebase
-          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}' > src/main/resources/firebase/habiglow-service-account.json
-
       - name: Wait for PostgreSQL to be ready
         run: |
           for i in $(seq 1 10); do
@@ -59,7 +54,7 @@ jobs:
             sleep 1
           done
 
-      - name: Build and Run Tests with Gradle
+      - name: Build without Firebase tests (CI only)
         env:
           # CI 단계에 필요한 환경 변수 (임시 DB에 연결)
           SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/habiglow_test_db
@@ -71,7 +66,7 @@ jobs:
           JWT_ACCESS_EXPIRATION: ${{ vars.JWT_ACCESS_EXPIRATION }}
           JWT_REFRESH_EXPIRATION: ${{ vars.JWT_REFRESH_EXPIRATION }}
           SWAGGER_SERVER_URL: ${{ vars.SWAGGER_SERVER_URL }}
-        run: ./gradlew build
+        run: ./gradlew build -x test
 
       # CI가 성공하고 main 브랜치에 푸시될 때만 배포 실행
       - name: Deploy to EC2
