--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -99,6 +99,8 @@ jobs:
             -Dspring.datasource.username=${{ secrets.DB_USERNAME }} \
             -Dspring.datasource.password=${{ secrets.DB_PASSWORD }} \
             -DJWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} \
+            -DJWT_ACCESS_EXPIRATION=${{ vars.JWT_ACCESS_EXPIRATION }} \
+            -DJWT_REFRESH_EXPIRATION=${{ vars.JWT_REFRESH_EXPIRATION }} \
             -DOPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
             ~/habiglow-0.0.1-SNAPSHOT.jar > ~/nohup.out 2>&1 &
           
